# LawGo-Traffic

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/lawgo-traffic/: SKILL.md
data/: ~$attrậttự.doc
data/eval/: golden_questions.sample.json
data/raw/: 168.2024.NĐ.CP.docx  24_2023_TT-BCA_m_559088.docx  36:2024:QH15_luattrậttự.docx  Luat-15-2012-QH13-XLVPHC.doc  Luật-35-2024-QH15.docx  Nghị-định-336-2025-NĐ-CP.docx
docs/: PROD.docx  ~$PROD.docx
docs/plan/: 01_plan_build_legal_graphrag_tool.md
docs/result/: phase1_legal_chunking.md
docs/spec/: 00_spec_project_scaffold.md  01_spec_legal_parser_and_chunking.md  02_spec_lightrag_indexing_and_graph_building.md  03_spec_legal_rag_search_tool.md  04_spec_multi_format_ingestion.md
docs/superpowers/plans/: 2026-06-24-multi-format-ingestion.md
docs/superpowers/specs/: 2026-06-12-linear-setup-design.md
scripts/: build_chunks.py  build_graph_index.py  ingest_docx.py  run_eval.py
src/lawgo_traffic/: config.py
src/lawgo_traffic/agent/: intent_router.py  main_agent.py  prompts.py
src/lawgo_traffic/api/: main.py  routes_chat.py  schemas.py
src/lawgo_traffic/eval/: evaluator.py  (+1 more)
tests/: test_chunk_builder.py  test_doc_id_map.py  test_extract_router.py  test_legal_parser.py  test_legal_rag_search.py  test_pdf_ocr_extractor.py  test_pdf_text_extractor.py
tests/fixtures/: _generate_scanned_pdf_fixture.py  _generate_scanned_pdf_fixture_11page.py  sample_law_text.doc  sample_law_text.txt
ui/: app.py
ui/pages/: chat.py
(+26 files in other folders)
