[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawgo-traffic"
version = "0.1.0"
description = "AI Legal Advisory Agent for Vietnam Traffic Law"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # UI
    "streamlit>=1.35.0",

    # Agent
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "openai>=1.30.0",

    # GraphRAG
    "lightrag-hku>=1.0.0",

    # Vector DB
    "qdrant-client>=1.9.0",

    # Graph DB
    "neo4j>=5.20.0",

    # Supabase
    "supabase>=2.4.0",

    # Document parsing
    "python-docx>=1.1.0",

    # Search
    "bm25s>=0.1.0",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Redis
    "redis>=5.0.0",

    # Utils
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
voice = [
    "edge-tts>=6.1.0",
    # phowhisper requires manual install: pip install git+https://github.com/VinAIResearch/PhoWhisper
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
